2010-06-11  Andreas Kupries  <andreask@activestate.com>

	* lib/meta/meta.tcl (::meta::2xref): Added the page title to the
	  list of things we can reference to in term's etc. dtplite had
	  this for quite some time, the big brother should have it as
	  well.

2010-06-08  Andreas Kupries  <andreask@activestate.com>

	* lib/dtglue/dtglue.tcl (::dtglue::cvtfiles): Updated to accept
	* lib/app-gen-doc/gen_doc.tcl (::app-gen-doc::run): an image map
	  for use by the new 'image' markup command of doctools.

2004-05-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* main.tcl: Implemented [SF Tcllib RFE 744109]. I.e. now diverting
	  the user directly to the help intro message when calling dtp
	  without arguments.

	* lib/app-help/help.tcl (::app-help::run): Added formats 'text'
	  and 'wiki' to the list. Mentioned in [SF Tcllib RFE 744109].

2003-11-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* lib/tools/tools.tcl: Changed to understand the option '-out'.
	* lib/app-toc/toc.tcl: The pre-existing option -out for 'meta'
	* lib/app-map/map.tcl: was renamed to '-outdir'. Now when -out
	* lib/app-idx/idx.tcl: is present for these sub-commands output
	* lib/app-script/script.tcl: is written to the file specified
	* lib/app-copyright/copyright.tcl: through the option instead of
	* lib/app-subst/subst.tcl: stdout.
	* lib/app-navbar/navbar.tcl:
	* lib/app-meta/meta.tcl:
	* lib/app-doc/doc.tcl:
	* lib/app-changelog/changelog.tcl:

2003-05-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* lib/app-assemble/assemble.tcl (help text): Fixed two spelling
	  errors. [SF Tcllib Bug 737171].

2003-03-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* WRAPPING.txt: Added a description of the new one-step process
	  for assembly + wrap.

	* lib/tools/sync.tcl: 
	* lib/app-assemble/assemble.tcl: Added wrapping of the assembled
	  directory hierarchy to the code. The synchronization engine to